# sapfo

./: .gitignore  MANIFEST.in  Makefile  README.md  backstorywindow.py  common.py  datalib.py  declin.vim  default_settings.json  defaultstyle.json  downloaddialog.py  entry_template.html  index_page.css  index_page_template.html  indexframe.py  infopanel.py  metadataeditor.py  metaframe.py  mypy.ini  qt.css  rawtext_wrapper.html  sapfo.py  sapfo_bootstrap.py3  setup.cfg  setup.py  taggedlist.py  tagsystem.py  template.css  terminal.py  viewer_page.css  viewer_page_template.html  viewerframe.py  vulture_whitelist.py  whitelist.py
sapfo/: __main__.py  backstorywindow.py  common.py  declarative.py  declin.py  declin_qt.py  flowlayout.py  indexframe.py  indexview.py  listlayout.py  sapfo.py  settings.py  storyview.py  taggedlist.py  tagsystem.py  terminal.py  test_indexframe.py  viewerframe.py
sapfo/data/: README-icons  defaultconfig.json  entry_layout.decl  qt.css
sapfo/data/templates/: entry_template.html  qt.css  tags_template.html  viewer_page.css  viewer_page_template.html
sapfo/declin/: __init__.py  common.py  parsing.py  types.py
sapfo/index/: entrylist.py  taginfolist.py  terminal.py
templates/: index_page.css  qt.css  tags_template.html  template.css
tests/: test_declin_parsing.py  test_tagsystem.py
