[metadata]
name = sapfo
version = attr: sapfo.__version__
description = 'Organize your novel/story writing files'
url = 'https://github.com/nycz/sapfo'
author = 'nycz'

[options]
python_requires = >= 3.8
packages = sapfo
install_requires =
    PyQt5
    libsyntyche >= 2.0.0
include_package_data = True

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pytest
    pytest-cov
    vulture

[options.entry_points]
gui_scripts =
    sapfo = sapfo.sapfo:main


# == Tools ==

[flake8]
max-line-length = 100

[mypy]
python_version = 3.8
warn_unreachable = True
